--- a/print.html
+++ b/print.html
@@ -89,7 +89,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html">Introduction</a></li><li class="chapter-item expanded "><a href="知止.html"><strong aria-hidden="true">1.</strong> 知止</a></li><li class="chapter-item expanded "><a href="我的来访雪莉.html"><strong aria-hidden="true">2.</strong> 我的来访雪莉</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html">作者简介</a></li><li class="chapter-item expanded "><a href="知止.html"><strong aria-hidden="true">1.</strong> 知止</a></li><li class="chapter-item expanded "><a href="我的来访雪莉.html"><strong aria-hidden="true">2.</strong> 我的来访雪莉</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -174,7 +174,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="introduction"><a class="header" href="#introduction">Introduction</a></h1>
+                        <h1 id="作者简介"><a class="header" href="#作者简介">作者简介：</a></h1>
 <h1 id="大家好我是矛盾文学奖得主顾钰涵"><a class="header" href="#大家好我是矛盾文学奖得主顾钰涵">大家好,我是矛盾文学奖得主顾钰涵。</a></h1>
 <img src="1.jpg" alt="The picture" style="display: block; margin-left: auto; margin-right: auto;">
 <div style="break-before: page; page-break-before: always;"></div><p><strong>知止</strong></p>
